# uk-due-diligence-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  HMLR_FIX.md  KNOWN_ISSUES.md  LAUNCHGUIDE.md  README.md  charity.py  companies_house.py  composite.py  disqualified.py  fly.toml  gazette.py  glama.json  hmrc_vat.py  http_client.py  inputs.py  land_registry.py  mcp-server-lessons.md  models.py  prompts.py  pyproject.toml  search_fetch.py  server.json  server.py
.github/workflows/: release.yml
docs/audits/: canonical-audit-2026-04-19.md
examples/carillion/: prompt.md
examples/carillion/chatgpt/: response.md  tools.md
examples/carillion/claude_code/: carillion_dd.md  carillion_dd_tool_use.md
tests/live/: .gitignore  run_matrix.py  run_tool.py  runner.py
